--- a/ctrl.html
+++ b/ctrl.html
@@ -100,7 +100,7 @@
                     <p class="text-sm font-semibold text-fuchsia-400 mb-3 uppercase">
                         // SCAN TO APPLY //
                     </p>
-                    <img src="https://chart.googleapis.com/chart?cht=qr&chs=150x150&chl=https://movie-cyber-student.com/apply" 
+                    <img src="qr.png" 
                          alt="QR Code for Application" 
                          onerror="this.onerror=null;this.src='https://placehold.co/150x150/000/fff?text=QR+CODE+LINK'"
                          class="mx-auto border-4 border-green-500 rounded-lg p-1 bg-white">
@@ -110,7 +110,7 @@
                 </div>
                 
                 <p class="text-sm text-gray-400 mt-6">
-                    (โปรโตคอล C.T.R.L. กำลังทำงานเบื้องหลัง)
+                    (ตั้งแต่วันี้ถึง 16)
                 </p>
             </div>
         </div>
